<resources>
    <string name="app_name">TestAppExmpl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome back</string>
    <string name="email">What\'s your email?</string>
    <string name="password">And your password?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_face_id">Would you like to\nlog in with FaceID?</string>
    <string name="face_id_btn_txt">Use Face ID</string>
    <string name="rejection_txt">No thanks</string>
    <string name="email_address_qstn_txt">What\'s your email \naddress?</string>
    <string name="email_exmpl">me@email.com</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="home_search">Try \"Running in London\"</string>
    <string name="bottom_sheet_search">Try \"Fitness classes\"</string>

    <string name="text_1">Loved the class! Such beautiful land and collective impact infrastructure social entrepreneurship mass incarceration 👌</string>
    <string name="text_2">Abigal Gates is going to Nike run club with 80 others</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>